--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -14,6 +14,7 @@
     overflow: scroll;
     max-height: 90vh;
     padding-left: 1.25em;
+    gap: 0;
 
     li {
       width: 100%;
